# f1api

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  PROMPT.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: .pre-commit.yml  ci.yml  dependabot.yml
alembic/: env.py  script.py.mako
alembic/versions/: 6c9ec75873f3_mvp_domain_tables.py  877a240c7ef0_fix_season_relationships.py  d10f190c010d_create_seasons_table.py
docker/: entrypoint.sh
f1api/: main.py
f1api/api/: __init__.py  deps.py  drivers.py  events.py  router.py  seasons.py  standings.py  teams.py
f1api/core/: config.py  db.py  errors.py
f1api/models/: __init__.py  base.py  circuit.py  driver.py  entry.py  event.py  season.py  session.py  session_result.py  team.py
f1api/schemas/: __init__.py  circuit.py  driver.py  event.py  pagination.py  season.py  session.py  session_result.py  standing.py  team.py
f1api/services/: seed_2024.py
tests/: conftest.py  test_api_drivers.py  test_api_events.py  test_api_seasons.py  test_api_standings.py  test_api_teams.py  test_db_migration.py  test_errors.py  test_health.py  test_metrics.py  test_seed_minimal_2024.py
